Enum gender {
  Male
  Female
}

Enum EntityNameType {
  Name
  Surname
  Alias
  Business_Name // [name: "Business Name"]
  Comercial_Designation // [name: "Comercial Designation"]
}

Table regions {
  id int [pk, increment, unique, not null]
}

Table subregions {
  id int [pk, increment, unique, not null]
  region_id int [not null, ref: > regions.id]
}

Table countries {
  id int [pk, increment, unique, not null]
  region_id int [not null, ref: > regions.id]
  subregion_id int [ref: > subregions.id]
}

Table states {
  id int [pk, increment, unique, not null]
  country_id int [not null, ref: > countries.id]
}

Table cities {
  id int [pk, increment, unique, not null]
  state_id int [not null, ref: > states.id]
}

Table entity {
  id uuidv7 [pk, unique, not null]
  fusion_master_entity_id uuidv7 [ref: > entity.id]
  is_natural boolean [not null, default: false]
  identity_document varchar(250)
  name varchar(250) [null]

  // Campos de registro de acción:
  created_at timestampz [not null, default: "now()"]
  created_by uuidv7 [not null]
  updated_at timestampz [not null, default: "now()"]
  updated_by uuidv7 [not null]
  fusioned_at timestampz
  fusioned_by uuidv7
  inactivated_at timestampz
  inactivated_by uuidv7
  annulled_at timestampz
  annulled_by uuidv7

  Indexes {
    (fusion_master_entity_id) [name: "idx_fusion_master_entity"]
    (created_by) [name: "idx_created_by"]
    (updated_by) [name: "idx_updated_by"]
    (fusioned_by) [name: "idx_fusioned_by"]
    (inactivated_by) [name: "idx_inactivated_by"]
    (annulled_by) [name: "idx_annulled_by"]
  }
}

Table natural_entity {
  entity_id uuidv7 [unique, not null, ref: - entity.id]
  gender gender [not null]
  birth_date date

  // Campos de registro de acción:
  created_at timestampz [not null, default: "now()"]
  created_by uuidv7 [not null]
  updated_at timestampz [not null, default: "now()"]
  updated_by uuidv7 [not null]
  inactivated_at timestampz
  inactivated_by uuidv7
  annulled_at timestampz
  annulled_by uuidv7

  Indexes {
    (entity_id) [name: "idx_entity"]
    (created_by) [name: "idx_created_by"]
    (updated_by) [name: "idx_updated_by"]
    (inactivated_by) [name: "idx_inactivated_by"]
    (annulled_by) [name: "idx_annulled_by"]
  }
}

Table identity_document_category {
  id uuidv7 [pk, unique, not null]
  parent_id uuidv7 [not null, ref: > identity_document_category.id]
  region_id int [ref: > regions.id]
  subregion_id int [ref: > subregions.id]
  country_id int [ref: > countries.id]
  state_id int [ref: > states.id]
  city_id int [ref: > cities.id]
  apply_to_natural boolean [not null, default: true]
  apply_to_legal boolean [not null, default: true]
  category varchar(250) [not null]
  symbol varchar(50)
  abbreviation varchar(50)

  // Campos de registro de acción:
  created_at timestampz [not null, default: "now()"]
  created_by uuidv7 [not null]
  updated_at timestampz [not null, default: "now()"]
  updated_by uuidv7 [not null]
  inactivated_at timestampz
  inactivated_by uuidv7
  annulled_at timestampz
  annulled_by uuidv7

  Indexes {
    (parent_id, region_id, subregion_id, country_id, state_id, city_id) [pk, unique, name: "identity_document_category_idx_unique"]
    (parent_id) [name: "identity_document_category_idx_parent_identity_document_category"]
    (region_id) [name: "identity_document_category_idx_region"]
    (subregion_id) [name: "identity_document_category_idx_subregion"]
    (country_id) [name: "identity_document_category_idx_country"]
    (state_id) [name: "identity_document_category_idx_state"]
    (city_id) [name: "identity_document_category_idx_city"]
    (apply_to_natural) [name: "identity_document_category_idx_apply_to_natural"]
    (apply_to_legal) [name: "identity_document_category_idx_apply_to_legal"]
    (created_by) [name: "identity_document_category_idx_created_by"]
    (updated_by) [name: "identity_document_category_idx_updated_by"]
    (inactivated_by) [name: "identity_document_category_idx_inactivated_by"]
    (annulled_by) [name: "identity_document_category_idx_annulled_by"]
  }
}

Table identity_document {
  id uuidv7
  identity_document_category_id uuidv7 [not null, ref: > identity_document_category.id]
  document varchar(250) [not null]

  // Campos de registro de acción:
  created_at timestampz [not null, default: "now()"]
  created_by uuidv7 [not null]
  updated_at timestampz [not null, default: "now()"]
  updated_by uuidv7 [not null]
  inactivated_at timestampz
  inactivated_by uuidv7
  annulled_at timestampz
  annulled_by uuidv7

  Indexes {
    (identity_document_category_id, document) [pk, unique, name: "identity_document_idx_unique"]
    (identity_document_category_id) [name: "identity_document_idx_parent_identity_document_category"]
    (created_by) [name: "identity_document_idx_created_by"]
    (updated_by) [name: "identity_document_idx_updated_by"]
    (inactivated_by) [name: "identity_document_idx_inactivated_by"]
    (annulled_by) [name: "identity_document_idx_annulled_by"]
  }
}

Table identity_document_by_entity {
  entity_id uuidv7 [not null, ref: > entity.id]
  identity_document_id uuidv7 [not null, ref: > identity_document.id]
  ordering int [not null, default: 0]

  // Campos de registro de acción:
  created_at timestampz [not null, default: "now()"]
  created_by uuidv7 [not null]
  updated_at timestampz [not null, default: "now()"]
  updated_by uuidv7 [not null]
  inactivated_at timestampz
  inactivated_by uuidv7
  annulled_at timestampz
  annulled_by uuidv7

  Indexes {
    (entity_id, identity_document_id) [pk, unique, name: "identity_document_by_entity_idx_unique"]
    (entity_id) [name: "identity_document_by_entity_idx_entity"]
    (identity_document_id) [name: "identity_document_by_entity_idx_identity_document"]
    (created_by) [name: "identity_document_by_entity_idx_created_by"]
    (updated_by) [name: "identity_document_by_entity_idx_updated_by"]
    (inactivated_by) [name: "identity_document_by_entity_idx_inactivated_by"]
    (annulled_by) [name: "identity_document_by_entity_idx_annulled_by"]
  }
}